--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@ nav a{
 
 .sImg{
   float: left;
-  padding-left: 5%;
-  
+  margin-left: 5%;
+  border-radius: 9px;
 }
 
 .newBlock{
@@ -72,4 +72,8 @@ nav a{
         font-size: 12px;
         border-width: 2px;
       }
+    .sImg{
+      width: 15%;
     }
+
+  }
